# anchor-bpf-template

programs/anchor-bpf-template/: Cargo.toml
programs/anchor_bpf_template/: Cargo.toml
programs/anchor_bpf_template/src/: lib.rs
programs/anchor_bpf_template/src/handlers/: handler_initialize.rs  mod.rs
programs/anchor_bpf_template/tests/: tests_basic_template.rs
programs/anchor_bpf_template/tests/common/: consts.rs  fixtures.rs  instructions.rs  macros.rs  mod.rs  runner.rs  setup.rs  types.rs
programs/anchor_bpf_template/tests/fixtures/: README.md
tests/: basic.ts
